19341
{code}
class TC[T[_]] {
  def identity[A](a: T[A]): T[A] = a
}
def value: TC[({type l[x] = Option})#l] = new TC[({type l[x] = Option})#l]
{code}

TC is * -> * but what I'm supplying is * -> * which should not be possible (the right hand side should only accept *)

Playing around with it some more:

{noformat}
scala> :t value.identity[Int] _
Option[A] => Option[A]
{noformat}

Where did that A come from?

{noformat}
scala> value.identity[Int](Some(1))
<console>:10: error: type mismatch;
 found   : Int(1)
 required: A
              value.identity[Int](Some(1))
                                       ^
{noformat}
